Fix overflow on pre,code tags
Code sections on the site using the pre tag were overflowing out of their container. If this is intentional then just ignore this pr.

--- a/css/style-custom.css
+++ b/css/style-custom.css
@@ -1,9 +1,10 @@
 pre, code {
-	font-family: 'Source Code Pro', sans-serif;
-	font-weight: 500;
-	font-size: 0.9em;
+  font-family: 'Source Code Pro', sans-serif;
+  font-weight: 500;
+  font-size: 0.9em;
   line-height: normal;
   background-color: #F2F2F2;
+  overflow: auto;
 }
 
 blockquote {
